initial login page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MobiiliprojektiR9</string>
+    <string name="title_activity_login_page">LoginPage</string>
 </resources>
